--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,9 @@ name = "solana-coverage"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
-repository = "https://github.com/procdump/solana-coverage.git"
+repository = "https://github.com/LimeChain/solana-coverage.git"
 readme = "README.md"
+description = "Meta crate for setting stubs necessary for obtaining code coverage from an Anchor program."
 
 [dependencies]
 solana-program-stubs = "0.1.0"
